--- a/TDFit/TDFit/Views/TrainingDiary.xaml
+++ b/TDFit/TDFit/Views/TrainingDiary.xaml
@@ -66,7 +66,7 @@
                     <Label Text="Nazwa" Grid.Column="0" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
                     <Label Text="Serie" Grid.Column="1" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
                     <Label Text="Powt." Grid.Column="2" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
-                    <Label Text="Edytuj" Grid.Column="3" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
+                    <Label Text="Edyt." Grid.Column="3" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
                     <Label Text="Usuń" Grid.Column="4" Grid.Row="0" Style="{DynamicResource headerTablet}"/>
                 </Grid>
                 <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" VerticalOptions="Center"
@@ -92,7 +92,7 @@
 
                                     </Grid.ColumnDefinitions>
                                       
-                                        <Label Text="{Binding Name, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
+                                        <Label Text="{Binding Name, Mode=TwoWay}" FontSize="Micro" Grid.Column="0" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Label Text="{Binding Series, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Label Text="{Binding Repeat, Mode=TwoWay}" Grid.Column="2" Grid.Row="0" Style="{DynamicResource detailTablet}"/>
                                     <Image x:Name="EditTraining"  HorizontalOptions="Start" Grid.Column="3" Grid.Row="0" Source="edit.png" HeightRequest="20" WidthRequest="20" Style="{DynamicResource ImgTablet}">
@@ -119,12 +119,12 @@
         <ContentView x:Name="popupAddTrainingView" BackgroundColor="#C0808080" Padding="10, 0" IsVisible="False" AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="All">
             <StackLayout VerticalOptions="Center" HorizontalOptions="Center">
                 <StackLayout Orientation="Vertical" HeightRequest="240" WidthRequest="300" BackgroundColor="White" >
-                    <Image HorizontalOptions="End" Source="delete.png" HeightRequest="20" WidthRequest="20">
-                        <Image.GestureRecognizers>
-                            <TapGestureRecognizer Tapped="OnImageNameTappedClosePopup" NumberOfTapsRequired="1" />
-                        </Image.GestureRecognizers>
-                    </Image>
-                    <Picker x:Name="ServiceEntry" Margin="20,0,20,0" Title="Podaj nazwę" ItemsSource="{Binding ServiceList}" SelectedItem="{Binding SelectedColorName, Mode=TwoWay}" />
+                        <Image HorizontalOptions="End" Source="delete.png" HeightRequest="20" WidthRequest="20">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="OnImageNameTappedClosePopup" NumberOfTapsRequired="1" />
+                            </Image.GestureRecognizers>
+                        </Image>
+                        <Picker x:Name="ServiceEntry" Margin="20,0,20,0" Title="Wybierz ćwiczenie" ItemsSource="{Binding ServiceList}" SelectedItem="{Binding SelectedColorName, Mode=TwoWay}" />
                     <Picker x:Name="SeriesEntry" Margin="20,0,20,0" Title="Ilość serii" ItemsSource="{Binding SeriesList}" SelectedItem="{Binding SelectedColorName, Mode=TwoWay}" />
                     <Entry x:Name="RepeatEntry" Margin="20,0,20,0" Placeholder="Ilość powtórzeń" Keyboard="Numeric" MaxLength="5">
 
